# backend/src/routes/user.js
@@ -20,11 +20,11 @@ const router = Router();
  *             properties:
  *               username:
  *                 type: string
- *                 example: johndoe
+ *                 example: lytt925
  *               email:
  *                 type: string
  *                 format: email
- *                 example: johndoe@example.com
+ *                 example: ytli.tw@gmail.com
  *               password:
  *                 type: string
  *                 format: password
@@ -32,6 +32,98 @@ const router = Router();
  *               provider:
  *                 type: string
  *                 enum: [native, facebook, google, line]
+ *     responses:
+ *       200:
+ *         description: Successful signup
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 access_token:
+ *                   type: string
+ *                   description: Access token
+ *                 access_expired:
+ *                   type: string
+ *                   description: Access token expired time
+ *                 user:
+ *                   type: object
+ *                   properties:
+ *                     id:
+ *                       type: integer
+ *                       description: User id
+ *                     provider: 
+ *                       type: string
+ *                       description: Authentication provider
+ *                     username:
+ *                       type: string
+ *                       description: User name
+ *                     email:
+ *                       type: string
+ *                       description: User email
+ *       400:
+ *         description: "Client Error"
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 error:
+ *                   type: string
+ *                   description: Client message
+ *                   example: Invalid password
+ *       500:
+ *         description: "Server Error"
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 error:
+ *                   type: string
+ *                   description: Server message
+ *                   example: Internal server error
+ */
+router.post('/signup', userController.signupUser);
+
+
+
+
+/**
+ * @swagger
+ * /user/login:
+ *   post:
+ *     tags:
+ *       - User
+ *     summary: Login user
+ *     description: Login user using email and password
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             required: [password, provider]
+ *             properties:
+ *               password:
+ *                 type: string
+ *                 format: password
+ *                 example: Password123
+ *               provider:
+ *                 type: string
+ *                 enum: [native, facebook, google, line]
+ *             oneOf:
+ *               - required: [username]
+ *                 properties:
+ *                   username:
+ *                     type: string
+ *                     example: lytt925
+ *               - required: [email]
+ *                 properties:
+ *                   email:
+ *                     type: string
+ *                     format: email
+ *                     example: johndoe@example.com
  *     responses:
  *       200:
  *         description: Successful signup
@@ -58,12 +150,13 @@ const router = Router();
  *                          provider: 
  *                            type: string
  *                            description: Authentication provider
- *                          name:
+ *                          username:
  *                            type: string
  *                            description: User name
  *                          email:
  *                            type: string
- *                            description: User email
+ *                            description: User email 
+ * 
  *       400:
  *         description: "Client Error"
  *         content:
@@ -85,8 +178,9 @@ const router = Router();
  *                 error:
  *                   type: string
  *                   description: Server message
- *                   example: Internal server error
+ *                   example: Internal server error 
  */
-router.post('/signup', userController.signupUser);
+router.post('/login', userController.loginUser);
+
 
 export default router
